css/overlay.less
@bootstrap-path: "/libs/bootstrap/less/";

@import "@{bootstrap-path}variables.less";

@import "@{bootstrap-path}mixins/size.less";
@import "@{bootstrap-path}mixins/text-overflow.less";
@import "@{bootstrap-path}mixins/vendor-prefixes.less";

@icon-font-path: "/libs/bootstrap/fonts/";
@import "@{bootstrap-path}glyphicons.less";

// Webfonts
@import url(http://fonts.googleapis.com/css?family=Fira+Sans:400,500,400italic,500italic);

@text-color: white;
@font-size-base: 22px;

body {
	font-family: 'Fira Sans', sans-serif;
	font-size: @font-size-base;
	line-height: @line-height-base;
	color: @text-color;
	margin: 0;
	padding: 0;
}

html, body {
	background: transparent;
}

// MIXINS

.overflow-ellipsis() {
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

// MAIN

::-webkit-scrollbar {
	visibility: hidden;
}

.clearfix:before,.clearfix:after {
	display: table;
	content:" "
}

.clearfix:after {
	clear: both
}

// VARIABLES

@default-bg-color: #133144;
@gradient-lightblue-darkblue: linear-gradient(to bottom, #1b3643 0%,#172533 100%);
@gradient-lightblue-darkblue-saturated: linear-gradient(to bottom, #14384b 0%,#081f38 100%);
@gradient-darkblue-blue: linear-gradient(to bottom, #162732 0%,#193141 100%);
@gradient-darkblue-blue-saturated: linear-gradient(to bottom, #122234 0%,#152d41 100%);
@carnumber-gradient: linear-gradient(to bottom, #173f65 0%,#112737 50%,#0f1520 100%);
@position-gradient: linear-gradient(to bottom, #ffffff 0%,#e8e8e8 20%,#e8e8e8 80%,#788493 100%);

@curved-mask: url(../img/curved-mask.svg) no-repeat;
@curved-mask-mirrored: url(../img/curved-mask-mirrored.svg) no-repeat;
@curved-mask-inverted: url(../img/curved-mask-inverted.svg) no-repeat;
@curved-mask-inverted-mirrored: url(../img/curved-mask-inverted-mirrored.svg) no-repeat;
@car-class-mask: url(../img/car-class-mask.svg) no-repeat;

// GLOBAL
.irtvso {
	position: absolute;

	&.top-aligned {
		top: 55px;
	}

	&.bottom-aligned {
		bottom: 0;

		&.above {
			bottom: 105px;
		}
	}

	.position {
		position: relative;
		float: left;
		width: 75px;
		height: 40px;
		border-top-left-radius: 10px;
		border-bottom-left-radius: 10px;
		z-index: 5;
		background: @position-gradient;
		-webkit-mask: @curved-mask top right;
		text-align: center;
		text-indent: -10px;
		font-style: italic;
		font-weight: 500;
		font-size: 1.3em;
		line-height: 1.25em;
		color: #0e1d27;
	}

	.car-number {
		width: 130px;
		height: 40px;
		float: left;
		background: @carnumber-gradient;
		-webkit-mask: @curved-mask-inverted top right;
		z-index: 1;
		text-align: center;
		text-indent: 20px;
		font-style: italic;
		font-weight: 500;
		font-size: 1.3em;
		line-height: 1.25em;
		color: #ffffff;

		.car-class {
			width: 42px;
			height: 40px;
			float: right;
			-webkit-mask: @car-class-mask top right;
		}
	}

	.position + .car-number {
		margin-left: -30px;
		text-indent: 30px;
	}
}

// SESSION INFO

#session-info {
	width: 210px;
	left: 50%;
	margin-left: -105px;
	font-size: 1.2em;
	line-height: 1.6em;

	.remaining, .session-flag {
		position: relative;
		height: 40px;
		text-align: center;
		text-transform: uppercase;
	}

	.remaining {
		border-top-left-radius: 10px;
		border-bottom-right-radius: 10px;
		background: @gradient-lightblue-darkblue-saturated;
		overflow: hidden;
		padding-right: 20px;

		.corner {
			width: 30px;
			height: 40px;
			position: absolute;
			top: 0;
			right: 0;
			background: @gradient-darkblue-blue-saturated;
			-webkit-mask: @curved-mask-inverted-mirrored top left;
		}
	}

	.session-flag {
		border-radius: 10px;
		border-top-left-radius: 0;
		color: black;
		font-weight: 500;
		display: none;

		&.yellow-flag, &.green-flag, &.white-flag, &.checkered-flag {
			display: block;
		}

		&.yellow-flag {
			background: linear-gradient(to bottom, darken(#ccca31, 15%) 0%,#ccca31 100%);
		}

		&.green-flag {
			background: linear-gradient(to bottom, darken(#299a0b, 15%) 0%,#299a0b 100%);
		}

		&.checkered-flag {
			background: url(../img/checkered-flag.jpg) top left no-repeat;
			background-size: 300px;
		}
	}

}

// GAP TICKER

#gap-ticker {
	left: 0;
	right: 0;
	height: 95px;
	background: @gradient-darkblue-blue;
	overflow: hidden;
	font-size: 1.2em;
	text-transform: uppercase;

	.title {
		position: absolute;
		top: 0;
		left: 0;
		width: 220px;
		height: 95px;
		padding-top: 5px;
		z-index: 10;
		text-align: center;
		font-weight: 500;
		font-style: italic;
		text-indent: 40px;
		background: @gradient-lightblue-darkblue;
		-webkit-mask: @curved-mask-inverted top right;
		-webkit-mask-size: cover;
	}

	.item-wrapper {
		white-space: nowrap;
		position: absolute;

		.gap-item {
			width: 730px;
			height: 95px;
			position: relative;
			white-space: normal;
			display: inline-block;
			line-height: 1.25em;

			> * {
				float: left;
			}

			.number-wrapper {
				height: 100%;
				margin-right: 5px;
			}

			.name, .gap-time {
				margin-top: 5px;
			}

			.name {
				width: 375px;
				.overflow-ellipsis();
			}

			.gap-time {
				text-align: right;
				width: 130px;
			}

			.divider {
				width: 3px;
				height: 30px;
				margin: 5px 20px;
				background: linear-gradient(to bottom, rgba(255,255,255,0) 0%,rgba(255,255,255,0.75) 50%,rgba(255,255,255,0) 100%);
			}
		}
	}
}

// DRIVER INFO

#driver-info {
	width: 1080px;
	height: 80px;
	left: 50%;
	margin-left: -540px;
	font-size: 1.2em;
	line-height: 1.3em;
	text-transform: uppercase;

	.top, .bottom {
		position: relative;
		width: 100%;
		height: 40px;
		border-radius: 10px;
		overflow: hidden;

		> * {
			float: left;
		}
	}

	.top {
		background: @gradient-darkblue-blue;
	}

	.bottom {
		background: @gradient-lightblue-darkblue;

		.name {
			margin-left: 140px;
		}
	}

	.name {
		margin-top: 5px;
		margin-left: 10px;
		width: 560px;
		.overflow-ellipsis();
	}

	.position-wrapper {
		font-size: .9em;
		line-height: 1.8em;
		float: right;
		border-top-left-radius: 10px;
		border-bottom-left-radius: 10px;
		padding-left: 10px;
		margin-right: -1px;
		background: @gradient-lightblue-darkblue-saturated;

		> * {
			float: left;
		}

		.position {
			-webkit-mask-position: top left;
			border-radius: 0;
			border-top-right-radius: 10px;
			border-bottom-right-radius: 10px;
			font-size: 1.5em;
			text-indent: 10px;
		}

		.text {
			padding-left: 5px;
		}
	}
}

